fix dark mode

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,7 +15,9 @@ em,
 div,
 li,
 span,
-strong {}
+strong {
+  color: var(--global-text-color);
+}
 
 hr {
   border-top: 1px solid var(--global-divider-color);
